--- a/requirements.txt
+++ b/requirements.txt
@@ -5,9 +5,9 @@ opencv_contrib_python==4.6.0.66
 opencv_python==4.7.0.72
 Pillow==9.5.0
 Pillow==9.5.0
-pywin32==305
+opencv-python-head
 streamlit==1.21.0
 streamlit_webrtc==0.45.0
 tensorflow==2.12.0
-tensorflow_intel==2.12.0
-~treamlit==1.20.0
+tensorflow_intel
+
