--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ opencv_contrib_python==4.6.0.66
 opencv_python==4.7.0.72
 Pillow==9.5.0
 Pillow==9.5.0
-opencv-python-head
+opencv-python-headless
 streamlit==1.21.0
 streamlit_webrtc==0.45.0
 tensorflow==2.12.0
