--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,8 @@ opencv_python==4.7.0.72
 Pillow==9.5.0
 Pillow==9.5.0
 opencv-python-headless
-streamlit==1.21.0
-streamlit_webrtc==0.45.0
+streamlit
+streamlit_webrtc 
 tensorflow==2.12.0
 tensorflow_intel
 
