--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,16 @@
 bokeh==3.1.0
-keras==2.12.0
+keras
 
 opencv_python==4.7.0.72
 Pillow==9.5.0
-Pillow==9.5.0
+
 
 
 tensorflow==2.12.0
 tensorflow_intel
 numpy~=1.21.2
 streamlit~=0.87.0
-keras~=2.4.3
+
 opencv-contrib-python-headless
 tensorflow-cpu
 streamlit_webrtc
