--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ tensorflow==2.12.0
 tensorflow_intel
 numpy
 streamlit~=0.87.0
-
+altair
 opencv-contrib-python-headless
 tensorflow-cpu
 streamlit_webrtc
