--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ Pillow==9.5.0
 tensorflow==2.12.0
 tensorflow_intel
 numpy
-streamlit~=0.87.0
+streamlit
 altair
 opencv-contrib-python-headless
 tensorflow-cpu
